--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "carbon-icons": "^7.0.7",
     "d3": ">=5.0.0 <=5.14.2",
     "next": "10.0.8",
+    "next-pwa": "^5.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
