--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "10.0.8",
     "next-pwa": "^5.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-document-meta": "^3.0.0-beta.2",
+    "react-dom": "17.0.1",
+    "react-meta-tags": "^1.0.1"
   }
 }
