--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,26 @@
-{
-    "name": "Acrópolis Digital",
-    "short_name": "Acropolis",
-    "lang": "es-419",
+  {
+    "name": "Acropolis Digital",
+    "short_name": "Acrópolis",
+    "icons": [
+      {
+        "src": "android-icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "apple-icon.png",
+        "sizes": "180x180",
+        "type": "image/png"
+      },
+      {
+        "src": "ms-icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      }
+    ],
+    "theme_color": "#FFFFFF",
+    "background_color": "#FFFFFF",
     "start_url": "/",
     "display": "standalone",
-    "theme_color": "#333333"
+    "orientation": "portrait"
   }
