General Purpose Update

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Acrópolis Digital",
-  "short_name": "Acrópolis Digital",
+  "name": "Guiadalajara",
+  "short_name": "Guiadalajara",
   "description": "La plataforma mexicana diseñada para tu negocio, dedicada a mejorar la forma en que las personas se mueven por el mundo real.",
   "lang": "es-MX",
   "start_url": "/",
